--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,32 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "CPP: current file",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${fileDirname}/${fileBasenameNoExtension}.exe",
+            "args": ["<", "input.txt"],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+            ],
+            "preLaunchTask": "cppbuild"
+        },
+        {
             "name": "CPP: main.cpp",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/main.exe",
             "args": ["<", "input.txt"],
             "stopAtEntry": false,
-            "cwd": "${fileDirname}",
+            "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
             
