--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-CodeForces.code-workspace
 contest_io_only.py
 codeforces.py
 grounds.py
@@ -6,4 +5,37 @@ CMakeLists.txt
 cmake-build-debug/
 .idea/
 __pycache__/
+*.code-workspace
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
 *.exe
+*.out
+*.app
