--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
                     "ignoreFailures": true
                 },
             ],
-            "preLaunchTask": "cppbuild"
+            "preLaunchTask": "cppbuild",
         },
         {
             "name": "Python: Current File",
