--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,8 @@
                 "main.cpp",
                 "-o",
                 "main.exe",
-                "--std=c++17"
+                "--std=c++20",
+                "-D_DEBUG=1"
             ],
             "problemMatcher": [
                 "$gcc"
@@ -32,7 +33,8 @@
                 "\"${relativeFile}\"",
                 "-o",
                 "main.exe",
-                "--std=c++17"
+                "--std=c++20",
+                "-D_DEBUG=1"
             ],
             "problemMatcher": [
                 "$gcc"
