--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,6 @@
         "*.tcc": "cpp",
         "chrono": "cpp",
         "functional": "cpp"
-    }
+    },
+    "C_Cpp.default.compilerPath": "/usr/lib64/ccache/g++"
 }
